fixed overlapping popup issue, click anywhere to exit popups on aquarium

--- a/client/src/components/modules/FishPopup.css
+++ b/client/src/components/modules/FishPopup.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Croissant+One|Open+Sans|Open+Sans+Condensed:300|Quicksand&display=swap');
 
+.full-window {
+    width: 100%;
+    height: 100%;
+}
+
 .window {
     background-color: rgba(255, 255, 255, 0.5);
     height: fit-content;
