--- a/client/src/components/modules/Popup.css
+++ b/client/src/components/modules/Popup.css
@@ -1,4 +1,7 @@
-
+.full-window {
+    width: 100%;
+    height: 100%;
+}
 .window {
     position: 'absolute';
     background-color: white;
