--- a/client/src/components/pages/Aquarium.css
+++ b/client/src/components/pages/Aquarium.css
@@ -3,6 +3,11 @@
     text-align: center;
 }
 
+.full-window {
+  width: 100%;
+  height: 100%;
+}
+
 img.fish {
     position: absolute;
     height: 28px;
@@ -10,12 +15,6 @@ img.fish {
     left: 0;
     top: 0;
   }
-
-  /* .ocean-decor img{
-    height: 10%;
-    width: 10%;
-    float: bottom;
-  } */
 
   .both-buttons {
     display: flex;
@@ -27,7 +26,7 @@ img.fish {
 
   .button-container{
     padding: 10px;
-    min-width: 140px;
+    min-width: fit-content;
   }
 
   .button-container button {
@@ -37,6 +36,7 @@ img.fish {
     font-family: 'Quicksand';
     font-size: 15px;
     color: grey;
+    min-width: 100px;
   }
   
   .water {
